# vsim

./: .gitignore  LICENSE  README.md  Untitled.ipynb  cli.py  fairness_convergence.ipynb  plurality_vs_majority.ipynb  proportional_vs_proportional.ipynb  requirements.txt  setup.cfg
data/: fairness-convergence-a91ed7aa-b6f6-4a85-9ccf-eeb37ea9da02.csv  plurality-vs-majority-fa1cf6e7-7f2f-4f95-bfcc-2e41c06130e0.csv  proportional-vs-proportional-df5ec973-c180-40ef-a410-1490716cd4e2.csv
research/: CHES2019V3.numbers
vsim/: candidates.py  common.py  electorate.py  simulation.py  voting_system.py
