[metadata]
name = vsim 
version = 0.0.1
author = blank 
description = Voting simulator
long_description = file: README.md
url = https://github.com/Expan75/vsim
project_urls =
    Bug Tracker = https://github.com/Expan75/vsim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =vsim
packages=find:
python_requires = >=3.8

[options.packages.find]
where=vsim
